--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "firebase": "^8.3.2",
-    "vue": "^2.6.14"
+    "pinia": "^2.1.6",
+    "vue": "^2.6.14",
+    "vue-router": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
