--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.1",
     "core-js": "^3.8.3",
     "firebase": "^8.3.2",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.4",
     "vue": "^2.6.14",
     "vue-router": "^2.8.1"
   },
@@ -22,6 +23,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-pinia": "~0.2.4",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
